<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.3">


<LinearLayout
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/instagram_logo_black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_email"
        style="@style/Theme.Instagram.TextInputLayoutStyle"
        app:hintEnabled="false">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_edit_text_email"
        style="@style/Theme.Instagram.EditTextStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Instagram.TextInputLayoutStyle"
        android:id="@+id/login_input_password"
        app:hintEnabled="false">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_edit_text_password"
        style="@style/Theme.Instagram.EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <co.aladinjunior.instagram.login.view.LoadingButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_bttn_enter"
        app:text="@string/enter" />

    <FrameLayout
        style="@style/Theme.Instagram.ContainerForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_border" />

        <TextView
            style="@style/Theme.Instagram.TextViewBase"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/or" />

    </FrameLayout>
</LinearLayout>
</ScrollView>